--- a/templates/base.html
+++ b/templates/base.html
@@ -258,7 +258,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/query" class="nav-link {% if request.endpoint == 'query' %}active{% endif %}">
-                        <i class="fas fa-search"></i> Query
+                        <i class="fas fa-robot"></i> RAG Chatbot
                     </a>
                 </li>
             </ul>
